--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,19 @@ h1 {
     border-bottom: solid 1px #3a3a3a; 
 }
 
+/* navbar styling with dropdown */ 
+nav {
+    position: absolute; 
+    background-color:#ffffff;
+    width: 100%;
+    left: 0; 
+    padding: 0 1rem;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: none;
+}  
+    
+
+
 /* main */ 
 main {
     background-color: bisque;
