--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,3 +100,27 @@ footer {
     background-color: #ffffff;
 
 }
+
+/* media query: tablets and larger (768px and upwards)*/ 
+@media screen and (min-width: 768px) {
+    /* Header */ 
+    nav {
+        display: block;
+        position: relative; 
+        box-shadow: none; 
+        width: fit-content;
+        padding-right: 1rem;
+    }
+
+    #menu {
+        display: flex;
+    }
+
+    #menu > li {
+        padding-left: 1rem;
+    }
+
+    .nav-toggle-label {
+        display: none;
+    }
+}
