--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,4 +123,25 @@ footer {
     .nav-toggle-label {
         display: none;
     }
+
+    #logo {
+        font-size: 280%;
+        line-height: 75px;
+        margin: 0 0.5rem;
+    }
+
+    /* main content */ 
+    main {
+        /*  Push main content down to accommodate larger header */ 
+        margin-top: 79px;
+    }
+}
+
+/* media query: tablets and larger (992px and higher)*/ 
+@media screen and (min-width: 992px) {
+   #menu a:hover {
+    cursor: pointer; 
+    border-bottom: solid 1px #3a3a3a;
+
+    }
 }
