--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,14 @@ main {
 
 }
 
+/* Hero */
+
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url(../images/hero-image.webp) no-repeat center center/cover;
+}
+
 /* footer */
 #social-networks {
     text-align: center;
