edited the hero cover text so it stands out and is well positioned for all screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,14 @@ body {
     font-family: 'lato', sans-serif; 
 
 }
+
+h1, h2, h3 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
+
 /* Header */ 
 header {
     background-color: #ffffff;
@@ -38,12 +46,6 @@ header a {
     color: inherit; 
 }
 
-h1 {
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525;
-}
 
 #menu {
     font-size: 110%;
@@ -103,6 +105,23 @@ main {
     background: url(../images/hero-image.webp) no-repeat center center/cover;
 }
 
+
+#cover-text {
+    /* setting the opacity to slightly transparent to make it stand out more */ 
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text, h2, #cover-text, h3 {
+    color: white; 
+}
+
 /* footer */
 #social-networks {
     text-align: center;
@@ -151,6 +170,12 @@ main {
     main {
         /*  Push main content down to accommodate larger header */ 
         margin-top: 79px;
+    }
+
+    /* Hero section */
+    #cover-text {
+        width: 300px;
+        right: 50px; 
     }
 }
 
